# livro_curso_intensivo

./: README.md  pyproject.toml
livro_curso_intensivo/: cap08.py
livro_curso_intensivo/cap09/: admin.py  dog.py  exercicio.py  ice_cream_stand.py  privileges.py  restaurant.py  user.py
tests/: test_livro_curso_intensivo.py
